# studio-activity

./: .env.example.luau  .env.template  .gitattributes  .gitignore  .luaurc  README.md  REVIEW.md  loom.config.luau  loom.lock.luau  project.luau  rokit.toml  selene.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: analyze.yml  deploy.yml  release-pr.yml  release.yml  test.yml
.lune/commands/: build.luau  ci.luau  dev.luau
.lune/commands/codegen/: init.luau
.lune/commands/install/: foundation.luau  init.luau  patches.luau  redirectPackages.luau
.lune/utils/: inject-build-vars.luau
.lute/: .config.luau  analyze.luau  build.luau  install.luau  lint.luau  patch.luau  setup.luau  test.luau
.lute/lib/: copyInto.luau  find.luau  findWhere.luau  run.luau  watch.luau
.lute/tasks/: run-tests.luau
.zed/: settings.json
backend/: .gitignore  Cargo.toml  build.rs  wrangler.toml
backend/migrations/: 0001_initial.sql
backend/src/: app.rs  error.rs  lib.rs  posthog.rs  proto.rs
backend/src/extractors/: app_json.rs  edge.rs  mod.rs  worker_context.rs  worker_env.rs
backend/src/middleware/: request_context.rs
backend/src/models/: edge_context.rs  mod.rs
backend/src/routes/: gh_redirect.rs  health.rs  mod.rs  oauth_browser.rs  ping.rs  telemetry.rs  version.rs
backend/src/routes/auth/: link.ts
backend/tests/: wasm.rs
backend/tests/wasm/: error.rs  extractors.rs  health.rs  helpers.rs  middleware.rs  ping.rs  posthog_pageview.rs  redirect.rs  routing.rs  telemetry.rs
plugin/: .darklua.json  .gitignore  default.project.json  default.project.jsonc  release.project.json  tests.project.json  wally.toml
plugin/patches/: Foundation.patch  Foundation_2.patch  Foundation_3.patch  jsdotlua_jest-environment@3.10.0.patch  jsdotlua_jest-runtime@3.10.0.patch
plugin/resources/: LocalizedStrings.csv
plugin/src/: Flags.luau  Logger.luau  StudioPresence.storybook.luau  jest.config.luau
protos/: buf.gen.yaml  buf.gen.yml
(+152 files in other folders)
