[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Brooke Rhodes <hello@brooke.sh>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http', 'axum'] }
worker-macros = { version = "0.7", features = ['http'] }
axum = { version = "0.8", features = ['json', 'tracing'], default-features = false }
tower-service = "0.3.3"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ['wasm-bindgen'] }
serde = { version = "1.0.228", features = ["derive"] }
prost = "0.14"
thiserror = "2.0.17"
http = "1.4.0"
once_cell = "1.21.4"

[build-dependencies]
prost-build = "0.14"
walkdir = "2.5.0"
