[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["Brooke Rhodes <hello@brooke.sh>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", features = [
    'json',
    'query',
    'tracing',
], default-features = false }
tower-service = "0.3.3"
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ['wasm-bindgen'] }
serde = { version = "1.0.228", features = ["derive"] }
prost = "0.14"
prost-reflect = { version = "0.16", features = ["serde"] }
pbjson = "0.9"
pbjson-types = "0.9"
serde_json = "1.0"
thiserror = "2.0.17"
http = "1.4.0"
once_cell = "1.21.4"
uuid = { version = "1.23.0", features = ["js", "v4"] }
nanoid = "0.4"
url = "2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[build-dependencies]
prost-build = "0.14"
pbjson-build = "0.9"
walkdir = "2.5.0"
